--- a/index.css
+++ b/index.css
@@ -143,3 +143,61 @@ tr,td{
     font-size: 20px;
   }
 }
+@media (max-width: 1000px) {
+  #count,#category,#search,#title {
+    outline: none;
+    border: none;
+    background-color: #111;
+    padding: 14px;
+    border-radius: 6px;
+    color: #fff;
+    width: 85%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  #search{
+    border-radius: 20px;
+  }
+  .crud{
+    width: 100%;
+    font-size: 12px;
+  }
+    button {
+      width: 90%;
+      outline: none;
+      border: none;
+      background-color: #470053;
+      color: white;
+      cursor: pointer;
+      border-radius: 20px;
+      height: 30px;
+      transition: 0.5s;
+    }
+        button:hover {
+          letter-spacing: 1px;
+          background-color: #51025f;
+        }
+   .btn-search {
+  display: flex;
+  justify-content: space-evenly;
+  }
+  .price{
+        /* height: 100px; */
+  }
+  .price input{
+    width: 40%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  #total{
+    display: block;
+    width: 75%;
+    margin: 10px auto;
+    padding: 8px;
+  }
+  .heading{
+    font-size: 23px;
+    margin-top: 8px;
+    margin-bottom: 8px;
+  }
+}
